--- a/index.html
+++ b/index.html
@@ -33,44 +33,44 @@
             <br /><br />
             <ul class="icons">
               <li>
-                <a
+                <
                   href="mailto:chen.huang23@imperial.ac.uk"
                   class="icon fa-solid fa-envelope"
-                  ><span class="label">Email</span></a
+                  ><span class="label">Email</span></
                 >
               </li>
               <li>
-                <a
+                <
                   href="https://github.com/chenx820"
                   class="icon brands fa-github"
-                  ><span class="label">GitHub</span></a
+                  ><span class="label">GitHub</span></
                 >
               </li>
               <li>
-                <a
+                <
                   href="https://www.linkedin.com/in/chen-huang-820x/"
                   class="icon brands fa-linkedin-in"
-                  ><span class="label">Linkedin</span></a
+                  ><span class="label">Linkedin</span></
                 >
               </li>
               <li>
-                <a
+                <
                   href="https://www.zhihu.com/people/huang-chen-54-4"
                   class="icon brands fa-zhihu"
-                  ><span class="label">Zhihu</span></a
+                  ><span class="label">Zhihu</span></
                 >
               </li>
               <li>
-                <a href="/docs/CV_ChenHuang.pdf" class="icon fa-solid fa-file"
-                  ><span class="label">CV</span></a
+                < href="/docs/CV_ChenHuang.pdf" class="icon fa-solid fa-file"
+                  ><span class="label">CV</span></
                 >
               </li>
             </ul>
 
             <br /><br />
             <p>
-              <a href="#main" class="scrolly"
-                >Welcome to Chen's Physics World!</a
+              < href="#main" class="scrolly"
+                >Welcome to Chen's Physics World!</
               >
             </p>
           </header>
@@ -79,37 +79,37 @@
         <!-- Nav -->
         <nav id="nav">
           <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li>< href="/index.html">Home</></li>
             <li>
-              <a href="/research/index.html">Research</a>
+              < href="/research/index.html">Research</>
               <ul>
                 <li>
-                  <a
+                  <
                     href="/research/compilation-for-neutral-atom-quantum-computers.html"
-                    >Compilation for neutral atom quantum computers</a
+                    >Compilation for neutral atom quantum computers</
                   >
                 </li>
                 <li>
-                  <a href="/research/calibration-of-trapped-ion-systems.html"
-                    >Calibration of trapped-ion systems</a
+                  < href="/research/calibration-of-trapped-ion-systems.html"
+                    >Calibration of trapped-ion systems</
                   >
                 </li>
                 <li>
-                  <a
+                  <
                     href="/research/charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge noise in semiconductor spin qubits</a
+                    >Charge noise in semiconductor spin qubits</
                   >
                 </li>
               </ul>
             </li>
-            <li><a href="/publications.html">Publications</a></li>
+            <li>< href="/publications.html">Publications</></li>
 
-            <li><a href="/notes.html">Notes</a></li>
-            <li><a href="/outreach/ibpe.html">Outreach</a></li>
+            <li>< href="/notes.html">Notes</></li>
+            <li>< href="/outreach/ibpe.html">Outreach</></li>
             <li>
-              <a href="#">Life</a>
+              < href="#">Life</>
               <ul>
-                <li><a href="/photography.html">Photography</a></li>
+                <li>< href="/photography.html">Photography</></li>
               </ul>
             </li>
           </ul>
@@ -166,7 +166,7 @@
                   src="audio/pronunciation_zh_chen.mp3"
                 ></audio>
                 <p>
-                  a passionate physics student exploring the
+                   passionate physics student exploring the
                   <strong>quantum world</strong>.
                 </p>
               </header>
@@ -177,7 +177,7 @@
           <article id="main" class="special">
             <p>
               My given name is <strong>Chen</strong>, which means "dawn" or
-              "early morning" in Chinese. This meaning suits me well, as I am a
+              "early morning" in Chinese. This meaning suits me well, as I am 
               morning person who enjoys the calm and peacefulness of the early
               hours. Interestingly, "Chen" is sometimes misheard as "Cheng,"
               which means "orange" in Chinese. Because of this playful
@@ -188,9 +188,9 @@
               My surname is <strong>Huang</strong>, which means "yellow" in
               Chinese. This name has deep historical and cultural roots. It is
               often associated with the
-              <a href="https://en.wikipedia.org/wiki/Yellow_Emperor"
-                >Yellow Emperor</a
-              >, a legendary figure considered one of the founding ancestors of
+              < href="https://en.wikipedia.org/wiki/Yellow_Emperor"
+                >Yellow Emperor</
+              >,  legendary figure considered one of the founding ancestors of
               Chinese civilization.
             </p>
             <p>
@@ -198,12 +198,12 @@
               interdisciplinary research and collaboration. If you're interested
               in discussing research or potential collaborations, feel free to
               reach out via
-              <a href="mailto:chen.huang23@imperial.ac.uk">email</a> or connect
+              < href="mailto:chen.huang23@imperial.ac.uk">email</> or connect
               with me on
-              <a
+              <
                 href="https://www.linkedin.com/in/chen-huang-820x"
                 target="_blank"
-                >LinkedIn</a
+                >LinkedIn</
               >.
             </p>
           </article>
@@ -235,9 +235,9 @@
             <div class="timeline-line"></div>
             <div class="timeline-item card">
               <h3>
-                <a
-                  href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/"
-                  >Quantum Optics and Laser Science (QOLS) Group</a
+                <
+                  href="https://www.imperial.ac.uk/-z-research/quantum-optics-and-laser-science/"
+                  >Quantum Optics and Laser Science (QOLS) Group</
                 >, Imperial College London
               </h3>
               <p class="text-secondary">Jun. 2024 - Present</p>
@@ -251,7 +251,7 @@
                 >. My work involves <strong>wire bonding</strong> quantum
                 devices for characterization and studying
                 <strong>charge transport</strong> in semiconductor quantum dots
-                at cryogenic temperatures using a
+                at cryogenic temperatures using 
                 <strong>dilution refrigerator</strong>. To streamline
                 experiments, I
                 <strong>developed automated Python packages</strong>
@@ -262,35 +262,35 @@
 
             <div class="timeline-item card">
               <h3>
-                <a href="http://en.baqis.ac.cn/research/groups/?cid=814"
-                  >Quantum Operating System Group</a
+                < href="http://en.baqis.ac.cn/research/groups/?cid=814"
+                  >Quantum Operating System Group</
                 >, Beijing Academy of Quantum Information Sciences (BAQIS)
               </h3>
               <p class="text-secondary">May 2024 - Present</p>
               <p>
-                As a remote intern at BAQIS, I focus on
+                As  remote intern at BAQIS, I focus on
                 <strong
                   ><i>compilation for neutral atom quantum computers</i></strong
                 >, an emerging quantum research field. I introduced
-                <strong>ZAP</strong>, a zoned architecture that
+                <strong>ZAP</strong>,  zoned architecture that
                 <strong
                   >divides the computational area into distinct storage and
                   entanglement zones</strong
-                >. Leveraging ASAP scheduling and a simulated annealing
+                >. Leveraging ASAP scheduling and  simulated annealing
                 algorithm, ZAP optimizes qubit placement and movement, fully
                 utilizing the dynamic connectivity and large-scale parallelism
-                of neutral atom platforms, leading to a
+                of neutral atom platforms, leading to 
                 <strong>significant fidelity improvement</strong>. This work is
                 available on
-                <a href="https://arxiv.org/abs/2411.14037">arXiv</a>.
+                < href="https://arxiv.org/abs/2411.14037">arXiv</>.
               </p>
             </div>
 
             <div class="timeline-item card">
               <h3>
-                <a
+                <
                   href="https://research.baidu.com/Research_Areas/index-view?id=75"
-                  >Institute for Quantum Computing</a
+                  >Institute for Quantum Computing</
                 >, Baidu Research, Baidu, Inc.
               </h3>
               <p class="text-secondary">Mar. 2023 - Sep. 2023</p>
@@ -315,9 +315,9 @@
 
             <div class="timeline-item card">
               <h3>
-                <a href="https://www.iqsqm.com/"
+                < href="https://www.iqsqm.com/"
                   >International Joint Lab on Quantum Sensing and Quantum
-                  Metrology</a
+                  Metrology</
                 >, HUST
               </h3>
               <p class="text-secondary">Apr. 2019 - Dec. 2022</p>
@@ -325,14 +325,14 @@
                 For my final year project,
                 <strong
                   ><i
-                    >Nanoscale Detection of Ions Using a Spin Quantum Sensor</i
+                    >Nanoscale Detection of Ions Using  Spin Quantum Sensor</i
                   ></strong
                 >, I studied NV center quantum sensing. Using theoretical
                 calculations and simulations, I derived the
                 <strong
                   >relationship between spin coherence time and ion
                   concentration</strong
-                >. Additionally, I developed a 2D axisymmetric model for a
+                >. Additionally, I developed  2D axisymmetric model for 
                 Surface Forces Apparatus cavity and performed finite element
                 analysis using <strong>COMSOL</strong>, demonstrating strong
                 agreement between analytical and simulation results.
@@ -341,16 +341,16 @@
 
             <div class="timeline-item card">
               <h3>
-                <a href="https://bradley-lab.weebly.com/">Bradley Lab</a>,
+                < href="https://bradley-lab.weebly.com/">Bradley Lab</>,
                 University of Saskatchewan - Saskatoon
               </h3>
               <p class="text-secondary">Jun. 2021 - Oct. 2021</p>
               <p>
-                As a participant in the
-                <a
+                As  participant in the
+                <
                   href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/"
                 >
-                  MITACS Globalink Research Internship</a
+                  MITACS Globalink Research Internship</
                 >, I contributed to the project
                 <strong
                   ><i
@@ -361,18 +361,18 @@
                 restrictions, my work was conducted remotely, focusing on
                 <strong>plasma motion simulations</strong>
                 and coding tasks, while gaining insights into
-                <strong>plasma processing techniques</strong>. (<a
+                <strong>plasma processing techniques</strong>. (<
                   href="/docs/certificate/certificate-MITACS.pdf"
-                  >View Certificate</a
+                  >View Certificate</
                 >)
               </p>
             </div>
 
             <div class="timeline-item card">
               <h3>
-                <a href="https://lodiphie.physics.sjtu.edu.cn/"
+                < href="https://lodiphie.physics.sjtu.edu.cn/"
                   >Laboratory of Low Dimensional Physics and Interface
-                  Engineering</a
+                  Engineering</
                 >, Shanghai Jiao Tong University
               </h3>
               <p class="text-secondary">Jun. 2021 - Sep. 2021</p>
@@ -387,7 +387,7 @@
                 <strong>Molecular Beam Epitaxy (MBE)</strong>
                 and
                 <strong>Scanning Tunneling Microscopy (STM)</strong>.
-                Additionally, I contributed to assembling a
+                Additionally, I contributed to assembling 
                 <strong>dilution refrigerator</strong>, gaining hands-on
                 experience with advanced experimental techniques.
               </p>
@@ -414,9 +414,9 @@
                 <p class="text-secondary">
                   The greatest honor for undergraduates at HUST, awarded to top
                   1%. The awarded students will be provided with professional
-                  instructors and personalized talent training plans. (<a
+                  instructors and personalized talent training plans. (<
                     href="/docs/certificate/certificate-outstanding-UG.pdf"
-                    >View Certificate</a
+                    >View Certificate</
                   >)
                 </p>
               </li>
@@ -446,36 +446,36 @@
             <section class="contact">
               <ul class="icons">
                 <li>
-                  <a
+                  <
                     href="mailto:chen.huang23@imperial.ac.uk"
                     class="icon fa-solid fa-envelope"
-                    ><span class="label">Email</span></a
+                    ><span class="label">Email</span></
                   >
                 </li>
                 <li>
-                  <a
+                  <
                     href="https://github.com/chenx820"
                     class="icon brands fa-github"
-                    ><span class="label">GitHub</span></a
+                    ><span class="label">GitHub</span></
                   >
                 </li>
                 <li>
-                  <a
+                  <
                     href="https://www.linkedin.com/in/chen-huang-820x/"
                     class="icon brands fa-linkedin-in"
-                    ><span class="label">Linkedin</span></a
+                    ><span class="label">Linkedin</span></
                   >
                 </li>
                 <li>
-                  <a
+                  <
                     href="https://www.zhihu.com/people/huang-chen-54-4"
                     class="icon brands fa-zhihu"
-                    ><span class="label">Zhihu</span></a
+                    ><span class="label">Zhihu</span></
                   >
                 </li>
                 <li>
-                  <a href="/docs/CV_ChenHuang.pdf" class="icon fa-solid fa-file"
-                    ><span class="label">CV</span></a
+                  < href="/docs/CV_ChenHuang.pdf" class="icon fa-solid fa-file"
+                    ><span class="label">CV</span></
                   >
                 </li>
               </ul>
@@ -486,8 +486,8 @@
               <ul class="menu">
                 <li>&copy; 2025 Chen Huang. All rights reserved.</li>
                 <li>
-                  Design: <a href="http://html5up.net">HTML5 UP</a>,
-                  <a href="https://www.deepseek.com/">DeepSeek</a>
+                  Design: < href="http://html5up.net">HTML5 UP</>,
+                  < href="https://www.deepseek.com/">DeepSeek</>
                 </li>
               </ul>
             </div>
