Update English tag

--- a/notes.html
+++ b/notes.html
@@ -139,7 +139,7 @@
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">English</span>
                       </div>
                     </div>
                     <div class="note-body">
@@ -163,7 +163,7 @@
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">English</span>
                       </div>
                     </div>
                     <div class="note-body">
@@ -184,7 +184,7 @@
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Math</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">English</span>
                       </div>
                     </div>
                     <div class="note-body">
@@ -211,7 +211,7 @@
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">English</span>
                       </div>
                     </div>
                     <div class="note-body">
@@ -233,7 +233,7 @@
                       <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">English</span>
                       </div>
                     </div>
                     <div class="note-body">
@@ -255,7 +255,7 @@
                       <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">English</span>
                       </div>
                     </div>
                     <div class="note-body">
@@ -335,7 +335,7 @@
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">English</span>
                       </div>
                     </div>
                     <div class="note-body">
@@ -609,7 +609,7 @@
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">English</span>
                       </div>
                     </div>
                     <div class="note-body">
@@ -791,7 +791,7 @@
                       <div class="note-meta">
                         <span class="pill">GRE</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">English</span>
                       </div>
                     </div>
                     <div class="note-body">
@@ -914,7 +914,7 @@
         Math: "subject",
         Engineering: "subject",
         GRE: "subject",
-        EN: "language",
+        English: "language",
         中文: "language",
       };
 
@@ -967,7 +967,7 @@
         Math: "math",
         Engineering: "engineering",
         GRE: "gre",
-        EN: "en",
+        English: "en",
         中文: "chinese",
       };
     }
