--- a/notes.html
+++ b/notes.html
@@ -967,7 +967,7 @@
         Math: "math",
         Engineering: "engineering",
         GRE: "gre",
-        English: "en",
+        English: "english",
         中文: "chinese",
       };
     }
