--- a/notes.html
+++ b/notes.html
@@ -697,12 +697,13 @@
                     <div class="note-body">
                       <p>Taught by Prof. He-Lin Wei.</p>
                       <div class="resource-links">
-                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
-                          >Study Notes:
-                        </strong>
-                        <a href="/docs/notes/[等离子体导论]课堂笔记.pdf"
-                          >Introduction to Plasma Physics</a
-                        >
+                        <h6>
+                          <i class="fas fa-book"></i
+                          ><strong>Study Notes: </strong>
+                          <a href="/docs/notes/[等离子体导论]课堂笔记.pdf"
+                            >Introduction to Plasma Physics</a
+                          >
+                        </h6>
                       </div>
                     </div>
                   </div>
