--- a/notes.html
+++ b/notes.html
@@ -133,7 +133,7 @@
                       >
                     </h3>
                   </header>
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Quantum Information (Fall 2023)</h4>
                       <div class="note-meta">
@@ -160,7 +160,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Quantum Optics (Fall 2023)</h4>
                       <div class="note-meta">
@@ -183,7 +183,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Mathematical Methods for Physicists (Fall 2023)</h4>
                       <div class="note-meta">
@@ -214,7 +214,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Advanced Classical Mechanics (Fall 2023)</h4>
                       <div class="note-meta">
@@ -238,7 +238,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Quantum Theory of Matter (Spring 2024)</h4>
                       <div class="note-meta">
@@ -262,7 +262,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Laser Technology (Spring 2024)</h4>
                       <div class="note-meta">
@@ -311,7 +311,7 @@
                       >
                     </h3>
                   </header>
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Mathematical Methods in Physics (Fall 2019)</h4>
                       <div class="note-meta">
@@ -347,7 +347,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Theoretical Mechanics (Fall 2019)</h4>
                       <div class="note-meta">
@@ -376,7 +376,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Electromagnetics (Fall 2019)</h4>
                       <div class="note-meta">
@@ -402,7 +402,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Optics (Spring 2020)</h4>
                       <div class="note-meta">
@@ -453,7 +453,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Analogue Electronics (Spring 2020)</h4>
                       <div class="note-meta">
@@ -503,7 +503,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Quantum Mechanics (Fall 2020)</h4>
                       <div class="note-meta">
@@ -544,7 +544,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Electrodynamics (Fall 2020)</h4>
                       <div class="note-meta">
@@ -567,7 +567,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
                       <div class="note-meta">
@@ -590,7 +590,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Digital Electronics (Fall 2020)</h4>
                       <div class="note-meta">
@@ -641,7 +641,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>
                         Thermodynamics and Statistical Physics (Spring 2021)
@@ -675,7 +675,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Solid State Physics (Spring 2021)</h4>
                       <div class="note-meta">
@@ -698,7 +698,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Quantum Optics (Fall 2021)</h4>
                       <div class="note-meta">
@@ -728,7 +728,7 @@
                     </div>
                   </div>
 
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Introduction to Plasma Physics (Fall 2021)</h4>
                       <div class="note-meta">
@@ -757,7 +757,7 @@
                       <a href="#pku" class="scrolly">Peking University</a>
                     </h3>
                   </header>
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Quantum Mechanics II (Summer 2020)</h4>
                       <div class="note-meta">
@@ -830,7 +830,7 @@
                       <a href="#others" class="scrolly">Self-Study</a>
                     </h3>
                   </header>
-                  <div class="note-card">
+                  <div class="card">
                     <div class="note-header">
                       <h4>Physics GRE (Fall 2021)</h4>
                       <div class="note-meta">
@@ -976,7 +976,7 @@
 
     /* 初始化课程元数据 */
     initCourseMetadata() {
-      document.querySelectorAll(".note-card").forEach((card) => {
+      document.querySelectorAll(".card").forEach((card) => {
         const section = card.closest("section");
         if (section) {
           card.dataset.university = this.getUniversityFromSection(section.id);
@@ -1034,7 +1034,7 @@
     generateFilterTags() {
       this.filterDimensions.forEach((dim) => {
         const values = new Set();
-        document.querySelectorAll(`.note-card`).forEach((card) => {
+        document.querySelectorAll(`.card`).forEach((card) => {
           if (card.dataset[dim]) values.add(card.dataset[dim]);
         });
         this.populateFilterTags(dim, Array.from(values));
@@ -1123,7 +1123,7 @@
 
     /* 核心过滤逻辑 */
     filterNotes() {
-      document.querySelectorAll(".note-card").forEach((card) => {
+      document.querySelectorAll(".card").forEach((card) => {
         const visible = this.isCourseVisible(card);
         card.style.display = visible ? "block" : "none";
       });
@@ -1156,7 +1156,7 @@
     updateSectionVisibility() {
       document.querySelectorAll("section[id]").forEach((section) => {
         const hasVisibleCards = Array.from(
-          section.querySelectorAll(".note-card")
+          section.querySelectorAll(".card")
         ).some((card) => card.style.display !== "none");
 
         const title = section.querySelector("h3.custom-title");
