--- a/notes.html
+++ b/notes.html
@@ -146,7 +146,9 @@
                       <p>
                         This course was taught by Prof. Myungshik Kim. My notes
                         were based on his lecture notes and the textbook by
-                        Nielsen and Chuang.
+                        Nielsen and Chuang. The topics covered include quantum
+                        gates, quantum algorithms, quantum error correction, and
+                        quantum entanglement.
                       </p>
                       <div class="resource-links">
                         <h6>
