--- a/notes.html
+++ b/notes.html
@@ -172,7 +172,19 @@
                       </div>
                     </div>
                     <div class="note-body">
-                      <p></p>
+                      <p>
+                        This course was taught by Prof. Florian Mintert and
+                        Prof. Michael Vanner. My notes were based on their
+                        lecture materials, covering topics such as atom-field
+                        interactions, coherent state and squeezed state, quantum
+                        detection, etc. Special thanks to Hao Chen, a PhD
+                        candidate at Princeton University, for insightful
+                        discussions. We are currently coauthoring an extended
+                        note on quantum optics, enriched with additional
+                        essential topics to provide a more comprehensive
+                        understanding and enhance the overall learning
+                        experience.
+                      </p>
                       <div class="resource-links">
                         <h6>
                           <i class="fas fa-book"></i
