--- a/notes.html
+++ b/notes.html
@@ -336,11 +336,11 @@
                     </div>
                     <div class="note-body">
                       <p>
-                        This course consists of two parts:
-                        <strong>Complex Analysis</strong>
-                        by Prof. Cheng-Gang Shao and
-                        <strong>Equations of Mathematical Physics</strong>
-                        by Prof. Yong Hu.
+                        This course was divided into two parts:
+                        <strong>Complex Analysis</strong>, taught by Prof.
+                        Cheng-Gang Shao, and
+                        <strong>Equations of Mathematical Physics</strong>,
+                        taught by Prof. Yong Hu.
                       </p>
                       <div class="resource-links">
                         <h6>
