--- a/photography.html
+++ b/photography.html
@@ -51,18 +51,18 @@
                 <li>
                   <a
                     href="/research/compilation-for-neutral-atom-quantum-computers.html"
-                    >Compilation for neutral atom quantum computers</a
+                    >Neutral Atom Compilation</a
                   >
                 </li>
                 <li>
                   <a href="/research/calibration-of-trapped-ion-systems.html"
-                    >Calibration of trapped-ion systems</a
+                    >Trapped Ion Calibration</a
                   >
                 </li>
                 <li>
                   <a
                     href="/research/charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge noise in semiconductor spin qubits</a
+                    >Semiconductor Charge Noise</a
                   >
                 </li>
               </ul>
