--- a/research/index.html
+++ b/research/index.html
@@ -39,18 +39,18 @@
                 <li>
                   <a
                     href="/research/compilation-for-neutral-atom-quantum-computers.html"
-                    >Compilation for neutral atom quantum computers</a
+                    >Neutral Atom Compilation</a
                   >
                 </li>
                 <li>
                   <a href="/research/calibration-of-trapped-ion-systems.html"
-                    >Calibration of trapped-ion systems</a
+                    >Trapped Ion Calibration</a
                   >
                 </li>
                 <li>
                   <a
                     href="/research/charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge noise in semiconductor spin qubits</a
+                    >Semiconductor Charge Noise</a
                   >
                 </li>
               </ul>
@@ -83,20 +83,20 @@
                 <h4>
                   <a
                     href="/research/compilation-for-neutral-atom-quantum-computers.html"
-                    >Compilation for neutral atom quantum computers</a
+                    >Neutral Atom Compilation</a
                   >
                 </h4>
                 <p></p>
                 <h4>
                   <a href="/research/calibration-of-trapped-ion-systems.html"
-                    >Calibration of trapped-ion systems</a
+                    >Trapped Ion Calibration</a
                   >
                 </h4>
                 <p></p>
                 <h4>
                   <a
                     href="/research/charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge noise in semiconductor spin qubits</a
+                    >Semiconductor Charge Noise</a
                   >
                 </h4>
               </section>
@@ -147,7 +147,7 @@
                   <h3>
                     <a
                       href="/research/compilation-for-neutral-atom-quantum-computers.html"
-                      >Compilation for neutral atom quantum computers</a
+                      >Neutral Atom Compilation</a
                     >
                   </h3>
                 </header>
@@ -186,27 +186,26 @@
                 <header>
                   <h3>
                     <a href="/research/calibration-of-trapped-ion-systems.html"
-                      >Calibration of trapped-ion systems</a
+                      >Trapped Ion Calibration</a
                     >
                   </h3>
                 </header>
                 <p>
-                  The key advantages of Calibration of trapped-ion systems
-                  include long quantum coherence times, high-precision
-                  single-qubit and two-qubit operations, and high-fidelity
-                  operations between any two qubits within the system. In
-                  trapped-ion quantum computing, single-qubit operations
-                  typically involve transitions between internal energy levels
-                  of the ions, which can be achieved by addressing the target
-                  ion with laser pulses. However, multi-qubit operations rely on
-                  the collective vibrational modes of the ion chain, known as
-                  phonons. Critical parameters such as ion positions, phonon
-                  frequencies, and the strength of ion-phonon interactions are
-                  closely related to the structure of the ion trap chip, the
-                  surrounding environment, and the configuration of the trapping
-                  potential. To achieve high-performance trapped-ion quantum
-                  computing, precise calibration of system parameters is
-                  essential.
+                  The key advantages of Trapped Ion Calibration include long
+                  quantum coherence times, high-precision single-qubit and
+                  two-qubit operations, and high-fidelity operations between any
+                  two qubits within the system. In trapped-ion quantum
+                  computing, single-qubit operations typically involve
+                  transitions between internal energy levels of the ions, which
+                  can be achieved by addressing the target ion with laser
+                  pulses. However, multi-qubit operations rely on the collective
+                  vibrational modes of the ion chain, known as phonons. Critical
+                  parameters such as ion positions, phonon frequencies, and the
+                  strength of ion-phonon interactions are closely related to the
+                  structure of the ion trap chip, the surrounding environment,
+                  and the configuration of the trapping potential. To achieve
+                  high-performance trapped-ion quantum computing, precise
+                  calibration of system parameters is essential.
                 </p>
                 <footer>
                   <a
