--- a/research/charge-noise-in-semiconductor-spin-qubits.html
+++ b/research/charge-noise-in-semiconductor-spin-qubits.html
@@ -39,18 +39,18 @@
                 <li>
                   <a
                     href="/research/compilation-for-neutral-atom-quantum-computers.html"
-                    >Compilation for neutral atom quantum computers</a
+                    >Neutral Atom Compilation</a
                   >
                 </li>
                 <li>
                   <a href="/research/calibration-of-trapped-ion-systems.html"
-                    >Calibration of trapped-ion systems</a
+                    >Trapped Ion Calibration</a
                   >
                 </li>
                 <li>
                   <a
                     href="/research/charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge noise in semiconductor spin qubits</a
+                    >Semiconductor Charge Noise</a
                   >
                 </li>
               </ul>
@@ -84,20 +84,20 @@
                 <h4>
                   <a
                     href="/research/compilation-for-neutral-atom-quantum-computers.html"
-                    >Compilation for neutral atom quantum computers</a
+                    >Neutral Atom Compilation</a
                   >
                 </h4>
                 <p></p>
                 <h4>
                   <a href="/research/calibration-of-trapped-ion-systems.html"
-                    >Calibration of trapped-ion systems</a
+                    >Trapped Ion Calibration</a
                   >
                 </h4>
                 <p></p>
                 <h4>
                   <a
                     href="/research/charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge noise in semiconductor spin qubits</a
+                    >Semiconductor Charge Noise</a
                   >
                 </h4>
                 <ol>
